--- a/templates/user.html
+++ b/templates/user.html
@@ -259,7 +259,7 @@ body {
         <button>الخدمات</button>
         <div class="menu-content">
             <a href="/worldcup">🏆 مشاهدة كأس العالم 2026</a>
-            <a href="#">🏠 شهادة سكن</a>
+            <a href="/certificate/residence">🏠 شهادة سكن</a>
             <a href="#">🎓 شهادة مدرسية</a>
         </div>
     </div>
@@ -367,6 +367,7 @@ document.addEventListener("DOMContentLoaded", fetchUserData);
 
 </body>
 </html>
+
 
 
 
